Fixed beer spacing on the beer list

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,10 +17,6 @@ input {
   padding-left: 10px;
 }
 
-/* input::placeholder{
-  padding-left: 10px ;
-} */
-
 a{
   text-decoration: none;
   color: #8AA555;
@@ -186,13 +182,12 @@ height: 7%;
 .user-dash {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 30px;
 } 
 
 .list-feed {
-grid-row-start: 1;
-grid-row-end: 3;
+grid-row: 1/4;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -200,13 +195,17 @@ overflow: auto;
 }
 
 .beer-list {
-  grid-row-start: 1;
-  grid-row-end: 3;
+  grid-row: 1/4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-evenly;  */
+  overflow: auto;
+
 }
 
 .users-list{
-  grid-column-start: 3;
-  grid-column-end: 4;
+  grid-row: 2/-1;
 }
 
 /* BEER LIST FEED */
@@ -220,6 +219,31 @@ overflow: auto;
 }
 
 /* ALL BEER DISPLAY */
+
+.beer-wrapper {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px
+}
+
+.beer-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.single-beer{
+  width: 20%;
+  height: 20%;
+  background-color: #ffd100;
+  border-radius: 15px;
+}
+
+.beer-image {
+  width: 20%;
+}
 
 
 /* USER INFO */
